--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,32 +1,50 @@
+$bg-tert:#707A7E;
 $bg-second: #fefefe;
-$bg-col:#F2F4F9;
+$bg-col: #F2F4F9;
+
 $primary: #01021E;
 $secondary: #030F8E;
 $icon-size: 2rem;
 
-.flex{
+.flex {
   display: flex;
 }
-.flex-col{
+
+.flex-col {
   @extend .flex;
   flex-direction: column;
 }
-.icon{
+
+.icon {
   width: $icon-size;
   margin: 0;
 }
-.icon-text{
+
+.icon-text {
   @extend .icon;
   width: 1.2rem;
 }
-.btn{
+
+.btn {
   padding: .6rem 1rem;
   border-radius: .5rem;
+  text-decoration: none;
+  color: $bg-col;
+  background-color: $primary;
+  border: inset 2px transparent;
+  &:visited {
+    text-decoration: none;
+  }
+  &:hover{
+    color: $primary;
+    background-color: transparent;
+    border: inset 2px $primary;
+  }
 }
 
 @import url(//fonts.googleapis.com/css?family=Roboto);
 
-body *{
+body * {
   font-family: roboto;
   margin: 10px 5px;
   color: $primary;
