--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import ProjectList from '../components/ProjectList.svelte';
             left: 0;
             bottom: 0;
             right: 0;
-            background-image: linear-gradient(rgba(0, 0, 0, 0), whitesmoke 70%), url("./assets/BG.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0), whitesmoke 70%), url("/assets/BG.jpg");
             background-repeat: no-repeat;
             background-position: top;
             background-size: cover;
