--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,19 +15,21 @@ import ProjectList from '../components/ProjectList.svelte';
         .subJob > * {
             @apply bg-gray-800 py-1 px-1 text-white
         }
-        .BGImg{
+
+        .BGImg {
             z-index: -2;
             position: absolute;
             top: 0;
             left: 0;
             bottom: 0;
             right: 0;
-            background-image: linear-gradient(rgba(0, 0, 0, 0), whitesmoke 70%), url("/assets/BG.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0), whitesmoke 70%), url(https://storage.googleapis.com/personal_portfolio_netlify/public/assets/bg.jpg);
             background-repeat: no-repeat;
             background-position: top;
             background-size: cover;
         }
-        .BGCov{
+
+        .BGCov {
             opacity: 0.4;
             z-index: -1;
             position: absolute;
@@ -57,15 +59,22 @@ import ProjectList from '../components/ProjectList.svelte';
         </div>
     </div>
 </section>
-<section class="px-5 py-16 relative">
+<section class="px-5 pt-5 relative">
     <!--Past Projects-->
-    <ProjectList client:load />
+    <ProjectList client:load/>
 </section>
 <section>
     <!--About Me-->
+    <div class="px-5 py-2">
+        <h1 class="font-bold text-2xl mb-2">About Me </h1>
+        <h2 class="font-bold text-xl mb-2">Hi There</h2>
+        <p>My name is Ivan, i am a computer science undergrad from Universitas Tarumanagara. i am a software engineer
+            with a focus on web development, AI and UI/UX. i am always interested in learning new things and trying new
+            challenges </p>
+    </div>
 </section>
-<section>
-    Photo by <a href="https://unsplash.com/@markusspiske?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Spiske</a> on <a href="https://unsplash.com/s/photos/tech?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-</section>
+<!--<section>-->
+<!--    Background Photo by <a href="https://unsplash.com/@markusspiske?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Spiske</a> on <a href="https://unsplash.com/s/photos/tech?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--</section>-->
 </body>
 </html>
