--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import ProjectList from '../components/ProjectList.svelte';
             left: 0;
             bottom: 0;
             right: 0;
-            background-image: linear-gradient(rgba(0, 0, 0, 0), whitesmoke 70%), url('./assets/bg.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0), whitesmoke 70%), url('/assets/bg.jpg');
             background-repeat: no-repeat;
             background-position: top;
             background-size: cover;
