--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ProjectList from '../components/ProjectList.svelte';
     <style global>
         @import "../styles/global.css";
     </style>
-    <title>Welcome to Astro</title>
+    <title>Ivan Wijaya - Software Engineer</title>
     <style>
         .subJob > * {
             @apply bg-gray-800 py-1 px-1 text-white
@@ -68,8 +68,8 @@ import ProjectList from '../components/ProjectList.svelte';
     <div class="px-5 py-2">
         <h1 class="font-bold text-2xl mb-2">About Me </h1>
         <h2 class="font-bold text-xl mb-2">Hi There</h2>
-        <p>My name is Ivan, i am a computer science undergrad from Universitas Tarumanagara. i am a software engineer
-            with a focus on web development, AI and UI/UX. i am always interested in learning new things and trying new
+        <p>My name is Ivan, i am a computer science undergrad from Universitas Tarumanagara. I am a software engineer
+            with a focus on web development, AI and UI/UX. I am always interested in learning new things and trying new
             challenges </p>
     </div>
 </section>
