--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 // Component imports and setup JavaScript go here!
 import ProjectList from '../components/ProjectList.svelte';
+import WorkList from '../components/WorkList.svelte';
 ---
 
 <html lang="en">
@@ -47,10 +48,21 @@ import ProjectList from '../components/ProjectList.svelte';
     <!--Intro-->
     <div class="BGImg absolute"></div>
     <div class="BGCov bg-gray-100"></div>
-    <div class="px-5 py-16 relative">
-        <h2 class="text-xl mb-2">Hello There, The name is</h2>
-        <h1 class="font-bold text-4xl">Ivan Wijaya</h1>
-        <span class="text-xl">💻 Software Engineer</span>
+    <div class="px-5 py-8 tall:py-8 relative">
+        <div class="flex flex-col align-middle sm:flex-row">
+            <div class="flex-none">
+                <h2 class="text-xl mb-2">Hello There, The name is</h2>
+                <h1 class="font-bold text-4xl">Ivan Wijaya</h1>
+                <span class="text-xl">💻 Software Engineer</span>
+            </div>
+            <div class="flex-auto flex pt-5 justify-items-center items-center sm:pt-0 sm:pl-16">
+                <a href="https://drive.google.com/file/d/1lThHt7vgwAQk5AIwHCbaQ-hasYgcTm_s/view?usp=sharing"
+                   class="rounded-lg py-2 px-4 hover:bg-slate-600 bg-slate-800 text-gray-100 transition">
+                    Get CV
+                </a>
+            </div>
+        </div>
+
         <div class="subJob my-4 grid gap-4 grid-flow-col grid-flow-row-dense sm:grid-flow-col-dense grid-cols-4 grid-rows-2 lg:grid-rows-1">
             <div class="col-span-4 sm:col-span-2 lg:col-span-1">🖥️ Fullstack Developer</div>
             <div class="col-span-4 sm:col-span-2 lg:col-span-1">📱 Mobile Software Developer</div>
@@ -58,21 +70,26 @@ import ProjectList from '../components/ProjectList.svelte';
             <div class="col-span-2 sm:col-span-2 lg:col-span-1">🖼️ UI Designer</div>
         </div>
     </div>
+
 </section>
 <section class="px-5 pt-5 relative">
     <!--Past Projects-->
     <ProjectList client:load/>
 </section>
-<section>
-    <!--About Me-->
-    <div class="px-5 py-2">
-        <h1 class="font-bold text-2xl mb-2">About Me </h1>
-        <h2 class="font-bold text-xl mb-2">Hi There</h2>
-        <p>My name is Ivan, i am a computer science undergrad from Universitas Tarumanagara. I am a software engineer
-            with a focus on web development, AI and UI/UX. I am always interested in learning new things and trying new
-            challenges </p>
-    </div>
+<section class="px-5 pt-5 relative">
+    <!--Past Projects-->
+    <WorkList client:load/>
 </section>
+<!--<section>-->
+<!--    &lt;!&ndash;About Me&ndash;&gt;-->
+<!--    <div class="px-5 py-2">-->
+<!--        <h1 class="font-bold text-2xl mb-2">About Me </h1>-->
+<!--        <h2 class="font-bold text-xl mb-2">Hi There</h2>-->
+<!--        <p>My name is Ivan, i am a computer science undergrad from Universitas Tarumanagara. I am a software engineer-->
+<!--            with a focus on web development, AI and UI/UX. I am always interested in learning new things and trying new-->
+<!--            challenges </p>-->
+<!--    </div>-->
+<!--</section>-->
 <!--<section>-->
 <!--    Background Photo by <a href="https://unsplash.com/@markusspiske?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Spiske</a> on <a href="https://unsplash.com/s/photos/tech?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
 <!--</section>-->
