--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,39 +41,40 @@ import WorkList from '../components/WorkList.svelte';
 </head>
 
 <body>
-<section class="relative">
+<section>
     <!--Intro-->
-    <div class="BGImg absolute"></div>
-    <div class="BGCov bg-gray-100"></div>
-    <div class="px-5 py-8 tall:py-8 relative">
-        <div class="flex flex-col align-middle sm:flex-row">
-            <div class="flex-none">
-                <h2 class="text-xl mb-2">Hello There, The name is</h2>
-                <h1 class="font-bold text-4xl">Ivan Wijaya</h1>
-                <span class="text-xl">💻 Software Engineer</span>
+    <div class="relative">
+        <div class="BGImg absolute"></div>
+        <div class="BGCov bg-gray-100"></div>
+        <div class="px-5 py-8 tall:py-8 relative">
+            <div class="flex flex-col align-middle sm:flex-row">
+                <div class="flex-none">
+                    <h2 class="text-xl mb-2">Hello There, The name is</h2>
+                    <h1 class="font-bold text-4xl">Ivan Wijaya</h1>
+                    <span class="text-xl">💻 Software Engineer</span>
+                </div>
+                <div class="flex-auto flex pt-5 justify-items-center items-center sm:pt-0 sm:pl-16">
+                    <a href="https://drive.google.com/file/d/1lThHt7vgwAQk5AIwHCbaQ-hasYgcTm_s/view?usp=sharing"
+                       class="rounded-lg py-2 px-4 hover:bg-slate-600 bg-slate-800 text-gray-100 transition">
+                        Get CV
+                    </a>
+                </div>
             </div>
-            <div class="flex-auto flex pt-5 justify-items-center items-center sm:pt-0 sm:pl-16">
-                <a href="https://drive.google.com/file/d/1lThHt7vgwAQk5AIwHCbaQ-hasYgcTm_s/view?usp=sharing"
-                   class="rounded-lg py-2 px-4 hover:bg-slate-600 bg-slate-800 text-gray-100 transition">
-                    Get CV
-                </a>
-            </div>
-        </div>
 
-        <div class="subJob my-4 grid gap-4 grid-flow-col grid-flow-row-dense sm:grid-flow-col-dense grid-cols-4 grid-rows-2 lg:grid-rows-1">
-            <div class="col-span-4 sm:col-span-2 lg:col-span-1">🖥️ Fullstack Developer</div>
-            <div class="col-span-4 sm:col-span-2 lg:col-span-1">📱 Mobile Software Developer</div>
-            <div class="col-span-2 sm:col-span-2 lg:col-span-1">👾 AI Engineer</div>
-            <div class="col-span-2 sm:col-span-2 lg:col-span-1">🖼️ UI Designer</div>
+            <div class="subJob my-4 grid gap-4 grid-flow-col grid-flow-row-dense sm:grid-flow-col-dense grid-cols-4 grid-rows-2 lg:grid-rows-1">
+                <div class="col-span-4 sm:col-span-2 lg:col-span-1">🖥️ Fullstack Developer</div>
+                <div class="col-span-4 sm:col-span-2 lg:col-span-1">📱 Mobile Software Developer</div>
+                <div class="col-span-2 sm:col-span-2 lg:col-span-1">👾 AI Engineer</div>
+                <div class="col-span-2 sm:col-span-2 lg:col-span-1">🖼️ UI Designer</div>
+            </div>
         </div>
     </div>
-
 </section>
-<section class="px-5 pt-5 relative">
+<section class="px-5 pt-5">
     <!--Past Projects-->
     <ProjectList client:load/>
 </section>
-<section class="px-5 pt-5 relative">
+<section class="px-5 pt-5">
     <!--Past Projects-->
     <WorkList client:load/>
 </section>
